Updating to 2af21a78be68b60ef31848cea45fc1378750f817.

--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -40,7 +40,7 @@
 		
 	
 		
-		<li><a href="#1_sublime_text" data-toggle="tab">Sublime Text </a></li>
+		<li><a href="#1_github_account" data-toggle="tab">Github & Course Forum </a></li>
 		
 	
 		
@@ -48,7 +48,7 @@
 		
 	
 		
-		<li><a href="#3_github_account" data-toggle="tab">Github & Course Forum </a></li>
+		<li><a href="#3_sublime_text" data-toggle="tab">Sublime Text </a></li>
 		
 	
 		
@@ -82,13 +82,57 @@
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
-<p>The blue boxes tell you what you need to do. Read them carefully.</p>
+<p>The blue boxes tell you what you need to do. Read them carefully!</p>
 </div>
 <p>If you have any problems, please let us know via the <a href='http://chat.code61.org'>course forum</a>. We would like people to sign up using their GitHub accounts (see the &#8220;GitHub and Course Forum&#8221; step) but if you&#8217;re having problems before that stage please feel free to give us a shout!</p>
 	</div>
 
 	
-	<div class="tab-pane " id="1_sublime_text">
+	<div class="tab-pane " id="1_github_account">
+	
+
+		<h2>Github & Course Forum</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Sign up for a GitHub account at <a href='https://github.com/'>https://github.com/</a>. Make sure you <strong>know your password</strong> to avoid awkward moments in class!</p>
+</div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>Using your GitHub account, sign up for the course forum at <a href='http://chat.code61.org/'>chat.code61.org/</a>.</li>
+
+<li>Introduce yourself in the &#8216;Welcome and introductions&#8217; post.</li>
+</ol>
+</div>
+<h3 id='what_is_github'>What is GitHub?</h3>
+
+<p>GitHub is a site that allows you to share code with others. It basically allows you to put a <em>git repository</em> online. Git is a program that helps with the management of code. If you want, you can find out a bit more about git now by reading the first part (down to Installation) of this <a href='http://alistapart.com/article/get-started-with-git'>Get Started with Git</a> article.</p>
+
+<p>There are several other sites that are similar to GitHub e.g. <a href='https://bitbucket.org'>BitBucket</a>. GitHub is by far the most widely used.</p>
+
+<p>GitHub also allows you to put a static website online for free, using <a href='http://pages.github.com/'>GitHub Pages</a> - another feature that we will be making use of during the course.</p>
+	</div>
+
+	
+	<div class="tab-pane " id="2_google_chrome">
+	
+
+		<h2>Google Chrome</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Download and install <a href='https://www.google.com/intl/en/chrome/browser/'>Google Chrome</a>.</p>
+</div>
+<h3 id='why_do_i_need_chrome'>Why do I need Chrome?</h3>
+
+<p>Chrome is a free web browser provided by Google. There are several other web browsers that you might have used, including Internet Explorer, Safari, Firefox and Opera. We will be using Chrome as it comes with a good set of developer tools that we will be using over the course.</p>
+
+<p><a href='http://www.mozilla.org/en-US/'>Firefox</a> also comes with an excellent set of developer tools (via its <a href='http://getfirebug.com/'>firebug extension</a>). There doesn&#8217;t seem to be much between Chrome and Firefox+firebug as far as the tools we&#8217;ll be using go. The decision to recommend Chrome was fairly arbitrary, but means that everyone will be using the same software.</p>
+	</div>
+
+	
+	<div class="tab-pane " id="3_sublime_text">
 	
 
 		<h2>Sublime Text</h2>
@@ -114,50 +158,6 @@
 <p>There are many text editors available including many excellent free and/or open source ones. Sublime Text is a popular code editor in the web development world at the moment and benefits from an active community of developers contributing add-ons and improvements. Although it isn&#8217;t free or open source, we have chosen it as our recommended editor as it: (a) gives a good user experience on mac, linux and windows; (b) is easy to get started with; and (c) can be easily customised when you get more advanced.</p>
 
 <p>If have a different text editor that you are already used to using, feel free to use that instead!</p>
-	</div>
-
-	
-	<div class="tab-pane " id="2_google_chrome">
-	
-
-		<h2>Google Chrome</h2>
-		<div class='exercise alert alert-info'><strong>
-<p>Task:</p>
-</strong>
-<p>Download and install <a href='https://www.google.com/intl/en/chrome/browser/'>Google Chrome</a>.</p>
-</div>
-<h3 id='why_do_i_need_chrome'>Why do I need Chrome?</h3>
-
-<p>Chrome is a free web browser provided by Google. There are several other web browsers that you might have used, including Internet Explorer, Safari, Firefox and Opera. We will be using Chrome as it comes with a good set of developer tools that we will be using over the course.</p>
-
-<p><a href='http://www.mozilla.org/en-US/'>Firefox</a> also comes with an excellent set of developer tools (via its <a href='http://getfirebug.com/'>firebug extension</a>). There doesn&#8217;t seem to be much between Chrome and Firefox+firebug as far as the tools we&#8217;ll be using go. The decision to recommend Chrome was fairly arbitrary, but means that everyone will be using the same software.</p>
-	</div>
-
-	
-	<div class="tab-pane " id="3_github_account">
-	
-
-		<h2>Github & Course Forum</h2>
-		<div class='exercise alert alert-info'><strong>
-<p>Task:</p>
-</strong>
-<p>Sign up for a GitHub account at <a href='https://github.com/'>https://github.com/</a>. Make sure you <strong>know your password</strong> to avoid awkward moments in class!</p>
-</div><div class='exercise alert alert-info'><strong>
-<p>Task:</p>
-</strong>
-<ol>
-<li>Using your GitHub account, sign up for the course forum at <a href='http://chat.code61.org/'>chat.code61.org/</a>.</li>
-
-<li>Introduce yourself in the &#8216;Welcome and introductions&#8217; post.</li>
-</ol>
-</div>
-<h3 id='what_is_github'>What is GitHub?</h3>
-
-<p>GitHub is a site that allows you to share code with others. It basically allows you to put a <em>git repository</em> online. Git is a program that helps with the management of code. If you want, you can find out a bit more about git now by reading the first part (down to Installation) of this <a href='http://alistapart.com/article/get-started-with-git'>Get Started with Git</a> article.</p>
-
-<p>There are several other sites that are similar to GitHub e.g. <a href='https://bitbucket.org'>BitBucket</a>. GitHub is by far the most widely used.</p>
-
-<p>GitHub also allows you to put a static website online for free, using <a href='http://pages.github.com/'>GitHub Pages</a> - another feature that we will be making use of during the course.</p>
 	</div>
 
 	
