Updating to 2af21a78be68b60ef31848cea45fc1378750f817.

--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -102,7 +102,7 @@
 
 <h3 id='course_assessment'>Course assessment</h3>
 
-<p>There will be no formal assessment on the course - you can&#8217;t pass or fail. The only measure of success is the knowledge and skills that you take away.</p>
+<p>There will be no formal assessment for the course - you can&#8217;t pass or fail. The only measure of success is the knowledge and skills that you take away.</p>
 
 <p>We will be setting you a fair amount of independent work in between sessions and it&#8217;s up to you to do this - we won&#8217;t always be checking. In many ways, the biggest value in this course comes from the access to support from our excellent TA team. Do not underestimate how important this is or what a unique opportunity you have! <strong>If you don&#8217;t keep up with the work, you will get little value from the course.</strong></p>
 
