--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -98,7 +98,7 @@
 <li>Ruby on Rails</li>
 </ul>
 
-<p>There are many exellent resources on the web for learning a lot of this material. We don&#8217;t want to reinvent the wheel and will unashamedly point you towards better sources of information when they exist. Rather than teach you everything from scratch, we aim to guide and support your learning.</p>
+<p>There are many excellent resources on the web for learning a lot of this material. We don&#8217;t want to reinvent the wheel and will unashamedly point you towards better sources of information when they exist. Rather than teach you everything from scratch, we aim to guide and support your learning.</p>
 
 <h3 id='course_assessment'>Course assessment</h3>
 
