Updating to 2af21a78be68b60ef31848cea45fc1378750f817.

--- a/ruby_plan.html
+++ b/ruby_plan.html
@@ -130,6 +130,8 @@
 <li>function calling without brackets</li>
 
 <li>yield</li>
+
+<li>return values of blocks, each vs map</li>
 </ul>
 
 <h2 id='ruby_5_classes'>Ruby 5: classes</h2>
