--- a/ruby4/index.html
+++ b/ruby4/index.html
@@ -40,7 +40,11 @@
 		
 	
 		
-		<li><a href="#2_iterating" data-toggle="tab">Iterating over a hash </a></li>
+		<li><a href="#2_hashes" data-toggle="tab">More about hashes </a></li>
+		
+	
+		
+		<li><a href="#3_symbols" data-toggle="tab">Symbols </a></li>
 		
 	
 </ul>
@@ -65,15 +69,169 @@
 <span class='n'>character</span><span class='o'>[</span><span class='s1'>&#39;name&#39;</span><span class='o'>]</span> <span class='c1'>#=&gt; &#39;Bart&#39;</span>
 <span class='n'>character</span><span class='o'>[</span><span class='s1'>&#39;catchphrase&#39;</span><span class='o'>]</span> <span class='c1'>#=&gt; &#39;Eat my shorts&#39;</span>
 </code></pre></div>
-<p>The above</p>
+<p>The above code creates a hash using the curly brackets <code>{ }</code>. Each element of the hash has a key e.g. <code>&#39;name&#39;</code> and a value e.g. <code>&#39;Bart&#39;</code>.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>
+<p>Grab the code for the session:</p>
+
+<pre><code>git clone https://github.com/TomClose/ruby4.git</code></pre>
+</li>
+
+<li>
+<p>With your partner work through <code>ruby4/hash.rb</code>. See if you can guess what each expression will do, then test by pasting into irb.</p>
+</li>
+</ol>
+</div>
 	</div>
 
 	
-	<div class="tab-pane " id="2_iterating">
+	<div class="tab-pane " id="2_hashes">
 	
 
-		<h2>Iterating over a hash</h2>
-		
+		<h2>More about hashes</h2>
+		<p>In the last exercise you will have learnt a number of things about hashes. Here is a summary of the important points:</p>
+
+<h3 id='accessing_and_setting_elements'>Accessing and setting elements</h3>
+<div class='highlight'><pre><code class='ruby'><span class='n'>h</span> <span class='o'>=</span> <span class='p'>{</span><span class='s1'>&#39;one&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>1</span><span class='p'>,</span> <span class='s1'>&#39;two&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>2</span><span class='p'>,</span> <span class='s1'>&#39;three&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>3</span><span class='p'>}</span>
+
+<span class='n'>h</span><span class='o'>[</span><span class='s1'>&#39;one&#39;</span><span class='o'>]</span> <span class='c1'>#=&gt; 1</span>
+<span class='n'>h</span><span class='o'>[</span><span class='s1'>&#39;four&#39;</span><span class='o'>]</span> <span class='c1'>#=&gt; nil</span>
+
+<span class='n'>h</span><span class='o'>[</span><span class='s1'>&#39;five&#39;</span><span class='o'>]</span> <span class='o'>=</span> <span class='mi'>5</span>
+<span class='n'>h</span><span class='o'>[</span><span class='s1'>&#39;one&#39;</span><span class='o'>]</span> <span class='o'>=</span> <span class='mi'>1</span><span class='o'>.</span><span class='mi'>0</span>
+
+<span class='n'>h</span> <span class='c1'>#=&gt; {&#39;one&#39; =&gt; 1.0, &#39;two&#39; =&gt; 2, &#39;three&#39; =&gt; 3, &#39;five&#39; =&gt; 5}</span>
+</code></pre></div>
+<ul>
+<li>You access an element via its key: <code>h[&#39;one&#39;]</code></li>
+
+<li>If the key isn&#8217;t in the hash this will give <code>nil</code></li>
+
+<li>You add new elements by setting their key</li>
+
+<li>If the key already exists its value will be updated</li>
+</ul>
+
+<h3 id='methods'>Methods</h3>
+
+<p>Hashes have a number of methods, which behave as you would expect e.g.</p>
+
+<ul>
+<li><code>length</code></li>
+
+<li><code>empty?</code></li>
+
+<li><code>keys</code>, <code>values</code></li>
+
+<li><code>has_key?</code>, <code>has_value?</code></li>
+
+<li><code>invert</code> (swaps keys with values)</li>
+</ul>
+
+<h3 id='iterating'>Iterating</h3>
+
+<p>Just like an Array, you can iterate over a Hash using the <code>each</code> method. Unlike array iteration, in hash iteration the block accepts two parameters: the key and the value:</p>
+<div class='highlight'><pre><code class='ruby'><span class='n'>h</span> <span class='o'>=</span> <span class='p'>{</span><span class='s1'>&#39;one&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>1</span><span class='p'>,</span> <span class='s1'>&#39;two&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>2</span><span class='p'>,</span> <span class='s1'>&#39;three&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>3</span><span class='p'>}</span>
+
+<span class='n'>h</span><span class='o'>.</span><span class='n'>each</span> <span class='k'>do</span> <span class='o'>|</span><span class='n'>key</span><span class='p'>,</span> <span class='n'>value</span><span class='o'>|</span>
+	<span class='nb'>puts</span> <span class='s2'>&quot;</span><span class='si'>#{</span><span class='n'>key</span><span class='si'>}</span><span class='s2'> = </span><span class='si'>#{</span><span class='n'>value</span><span class='si'>}</span><span class='s2'>&quot;</span>
+<span class='k'>end</span>
+</code></pre></div>
+<h3 id='combining_hashes'>Combining hashes</h3>
+
+<p>Combining hashes is done by using the <code>merge</code> method. The values from the second hash are added to the first, replacing them if they already exist. You will often see this used in rails for specifying default options to a function:</p>
+<div class='highlight'><pre><code class='ruby'><span class='k'>def</span> <span class='nf'>print_names</span><span class='p'>(</span><span class='n'>opts</span><span class='p'>)</span>
+	<span class='n'>default_opts</span> <span class='o'>=</span> <span class='p'>{</span><span class='s1'>&#39;fancy_format&#39;</span> <span class='o'>=&gt;</span> <span class='kp'>true</span><span class='p'>,</span> <span class='s1'>&#39;max_length&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>20</span><span class='p'>}</span>
+
+	<span class='c1'># replace the defaults with options supplied</span>
+	<span class='n'>my_opts</span> <span class='o'>=</span> <span class='n'>default_opts</span><span class='o'>.</span><span class='n'>merge</span><span class='p'>(</span><span class='n'>opts</span><span class='p'>)</span> 
+
+	<span class='k'>if</span> <span class='n'>my_opts</span><span class='o'>[</span><span class='s1'>&#39;fancy_format&#39;</span><span class='o'>]</span>
+		<span class='c1'># ....</span>
+	<span class='k'>end</span>
+
+	<span class='c1'>#...</span>
+<span class='k'>end</span>
+</code></pre></div>
+<h3 id='hashes_with_defaults'>Hashes with defaults</h3>
+
+<p>It is possible to specify a default value (or even a default block) which will be used when the key doesn&#8217;t exist, by creating a hash using <code>Hash.new</code></p>
+<div class='highlight'><pre><code class='ruby'><span class='n'>player_levels</span> <span class='o'>=</span> <span class='no'>Hash</span><span class='o'>.</span><span class='n'>new</span><span class='p'>(</span><span class='s1'>&#39;Beginner&#39;</span><span class='p'>)</span>
+
+<span class='n'>player_levels</span><span class='o'>[</span><span class='s1'>&#39;Tom&#39;</span><span class='o'>]</span> <span class='c1'>#=&gt; &#39;Beginner&#39;</span>
+
+<span class='n'>player_levels</span> <span class='c1'>#=&gt; {&#39;Tom&#39; =&gt; &#39;Beginner&#39;}</span>
+</code></pre></div>
+<p>Note how the new value is added to the hash.</p>
+
+<p>You can also specify a default block, which will be called on each missing value:</p>
+<div class='highlight'><pre><code class='ruby'><span class='n'>square_numbers</span> <span class='o'>=</span> <span class='no'>Hash</span><span class='o'>.</span><span class='n'>new</span> <span class='p'>{</span><span class='o'>|</span><span class='nb'>hash</span><span class='p'>,</span> <span class='n'>key</span><span class='o'>|</span> <span class='nb'>hash</span><span class='o'>[</span><span class='n'>key</span><span class='o'>]</span> <span class='o'>=</span> <span class='n'>key</span><span class='o'>**</span><span class='mi'>2</span> <span class='p'>}</span>
+
+<span class='n'>square_numbers</span><span class='o'>[</span><span class='mi'>5</span><span class='o'>]</span> <span class='c1'>#=&gt; 25</span>
+<span class='n'>square_numbers</span><span class='o'>[</span><span class='mi'>6</span><span class='o'>]</span> <span class='c1'>#=&gt; 36</span>
+
+<span class='n'>square_numbers</span> <span class='c1'>#=&gt; {5 =&gt; 25, 6 =&gt; 36}</span>
+</code></pre></div>
+<p>The above could be used to save the results of an expensive calculation: if you do <code>square_numbers[5]</code> again it doesn&#8217;t need to work it out - it just looks up the result.</p>
+
+<h3 id='converting_to_arrays_and_back'>Converting to arrays and back</h3>
+
+<p>You can convert a hash to an array using the <code>to_a</code> method and use the <code>Hash[ ]</code> syntax to convert it back:</p>
+<div class='highlight'><pre><code class='ruby'><span class='n'>h</span> <span class='o'>=</span> <span class='p'>{</span><span class='s1'>&#39;a&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>1</span><span class='p'>,</span> <span class='s1'>&#39;b&#39;</span> <span class='o'>=&gt;</span> <span class='mi'>2</span><span class='p'>}</span>
+
+<span class='n'>h</span><span class='o'>.</span><span class='n'>to_a</span> <span class='c1'>#=&gt; [[&#39;a&#39;, 1], [&#39;b&#39;, 2]]</span>
+
+<span class='n'>h2</span> <span class='o'>=</span> <span class='no'>Hash</span><span class='o'>[[</span><span class='s1'>&#39;a&#39;</span><span class='p'>,</span> <span class='mi'>1</span><span class='o'>]</span><span class='p'>,</span> <span class='o'>[</span><span class='s1'>&#39;b&#39;</span><span class='p'>,</span> <span class='mi'>2</span><span class='o'>]]</span>
+</code></pre></div>
+<p>The <code>Hash[ ]</code> is also useful for creating a hash from arrays of keys and values (which is surprisingly useful).</p>
+<div class='highlight'><pre><code class='ruby'><span class='n'>keys</span> <span class='o'>=</span> <span class='o'>[</span><span class='mi'>1</span><span class='p'>,</span> <span class='mi'>2</span><span class='p'>,</span> <span class='mi'>3</span><span class='o'>]</span>
+<span class='n'>values</span> <span class='o'>=</span> <span class='o'>[</span><span class='s1'>&#39;one&#39;</span><span class='p'>,</span> <span class='s1'>&#39;two&#39;</span><span class='p'>,</span> <span class='s1'>&#39;three&#39;</span><span class='o'>]</span>
+
+<span class='c1'># use Array#zip to get the arrays in the right format</span>
+<span class='n'>zipped</span> <span class='o'>=</span> <span class='n'>keys</span><span class='o'>.</span><span class='n'>zip</span><span class='p'>(</span><span class='n'>values</span><span class='p'>)</span>  <span class='c1'>#=&gt; [[1, &#39;one&#39;], [2, &#39;two&#39;], [3, &#39;three&#39;]]</span>
+
+<span class='n'>h</span> <span class='o'>=</span> <span class='no'>Hash</span><span class='o'>[</span><span class='n'>zipped</span><span class='o'>]</span>  <span class='c1'>#=&gt; {1 =&gt; &#39;one&#39;, 2 =&gt; &#39;two&#39;, 3 =&gt; &#39;three&#39;}</span>
+</code></pre></div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>Complete the three functions in <code>ruby4/character.rb</code></li>
+
+<li>Test your solutions using <code>test_character.rb</code></li>
+</ol>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="3_symbols">
+	
+
+		<h2>Symbols</h2>
+		<p>Symbols save space</p>
+<div class='highlight'><pre><code class='ruby'><span class='s2'>&quot;hello&quot;</span>
+<span class='ss'>:hello</span>
+</code></pre></div><div class='highlight'><pre><code class='ruby'><span class='ss'>:hello</span><span class='o'>.</span><span class='n'>to_s</span>
+<span class='s2'>&quot;hello&quot;</span><span class='o'>.</span><span class='n'>to_sym</span>
+
+
+<span class='s2'>&quot;hello&quot;</span> <span class='o'>&lt;&lt;</span> <span class='s2'>&quot; world&quot;</span>
+<span class='ss'>:hello</span> <span class='o'>&lt;&lt;</span> <span class='ss'>:&quot; world&quot;</span>
+
+<span class='s2'>&quot;hello&quot;</span><span class='o'>.</span><span class='n'>object_id</span>
+
+<span class='ss'>:hello</span><span class='o'>.</span><span class='n'>object_id</span>
+</code></pre></div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>Do <code>ruby4/symbolize_keys.rb</code>.</li>
+
+<li>Test your answers using <code>test_symbolize_keys.rb</code></li>
+</ol>
+</div>
 	</div>
 
 </div>
