Updating to 2af21a78be68b60ef31848cea45fc1378750f817.

--- a/ruby4/index.html
+++ b/ruby4/index.html
@@ -47,6 +47,10 @@
 		<li><a href="#3_symbols" data-toggle="tab">Symbols </a></li>
 		
 	
+		
+		<li><a href="#wrapping_up" data-toggle="tab">Wrapping up </a></li>
+		
+	
 </ul>
 
 <div class="tab-content">
@@ -231,6 +235,18 @@
 
 <li>Test your answers using <code>test_symbolize_keys.rb</code></li>
 </ol>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="wrapping_up">
+	
+
+		<h2>Wrapping up</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Work through <code>i_have_a_dream.rb</code>. Test your solution using <code>test_i_have_a_dream.rb</code>.</p>
 </div>
 	</div>
 
