--- a/ruby_plan.html
+++ b/ruby_plan.html
@@ -132,9 +132,11 @@
 <li>yield</li>
 
 <li>return values of blocks, each vs map</li>
+
+<li>types of variables</li>
 </ul>
 
-<h2 id='ruby_5_classes'>Ruby 5: classes</h2>
+<h2 id='ruby_6_classes'>Ruby 6: classes</h2>
 
 <ul>
 <li>classes as data and methods</li>
