--- a/ruby5/index.html
+++ b/ruby5/index.html
@@ -89,6 +89,32 @@
 <span class='n'>welcome_message2</span> <span class='c1'>#=&gt; &quot;Hello World&quot;</span>
 <span class='n'>welcome_message2</span><span class='p'>(</span><span class='s2'>&quot;Tom&quot;</span><span class='p'>)</span> <span class='c1'>#=&gt; &quot;Hello Tom&quot;</span>
 </code></pre></div>
+<h3 id='optional_variables'>Optional variables</h3>
+
+<p>You can also provide optional variables like this:</p>
+<div class='highlight'><pre><code class='ruby'> 
+<span class='k'>def</span> <span class='nf'>say_goodbye</span><span class='p'>(</span><span class='n'>opts</span><span class='o'>=</span><span class='p'>{})</span>
+    <span class='k'>if</span> <span class='n'>opts</span><span class='o'>[</span><span class='ss'>:grumpily</span><span class='o'>]</span>
+        <span class='s2'>&quot;Oh, you&#39;re going. Thank goodness for that.&quot;</span>
+    <span class='k'>else</span>
+        <span class='s2'>&quot;Goodbye. Come again soon!&quot;</span>
+    <span class='k'>end</span>
+<span class='k'>end</span>
+</code></pre></div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>
+<p>Grab the code for this session:</p>
+
+<p>git clone https://github.com/TomClose/ruby5.git</p>
+</li>
+
+<li>
+<p>Er.</p>
+</li>
+</ol>
+</div>
 	</div>
 
 	
