Updating to 2d6a40553c03b3c363341b2f6f8afc8d1a048541.

--- a/cfg.html
+++ b/cfg.html
@@ -28,10 +28,17 @@
 
   <div class="container">
 
-    <div class='page-header cfg'>
-	<img src='/assets/cfg_logo.png' /><span class='big'>@</span><img src='/assets/code61_logo_words_74h.png' />
-</div>
-<p><a href='/hmwk0'>Course Preparation</a></p>
+    <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
+
+<h3 id='session_1__272013'>Session 1 - 2/7/2013</h3>
+
+<ul>
+<li><a href='/hmwk0'>Course Preparation</a></li>
+
+<li><a href='/html1'>Web Fundamentals 1</a></li>
+
+<li><a href='/hmwk1'>Homework</a></li>
+</ul>
 
 
   </div> <!-- /container -->
