--- a/hmwk0/index.html
+++ b/hmwk0/index.html
@@ -351,7 +351,8 @@ echo &#39;eval &quot;$(rbenv init -)&quot;&#39; &gt;&gt; ~/.bash_profile</code><
 <li>
 <p>Then type:</p>
 
-<pre><code>rbenv global 1.9.3-p392</code></pre>
+<pre><code>rbenv global 1.9.3-p392
+rbenv rehash</code></pre>
 
 <p>This will set your system to use the new version of ruby by default.</p>
 </li>
