--- a/html1/index.html
+++ b/html1/index.html
@@ -110,6 +110,8 @@
 </div>
 <p>One of the first things that happens when you type a URL into your browser is a <em>DNS lookup</em>: your computer contacts a DNS server (<em>Domain Name System server</em>), which is basically a massive address book of IP addresses. The DNS server converts the domain name from the URL (e.g. <code>bbc.co.uk</code>) into an address for a server (such as <code>212.57.244.67</code>).</p>
 
+<h3 id='putting_up_a_website'>Putting up a website</h3>
+
 <p>If you want to put up your own website at your own domain name you need two things:</p>
 
 <ol>
@@ -218,9 +220,7 @@
 <p>Task:</p>
 </strong>
 <ol>
-<li>Open Google Chrome</li>
-
-<li>Go to any web site (eg. <a href='/'>this one</a>)</li>
+<li>Open this page in Google Chrome</li>
 
 <li>View the page source (View &gt; Developer &gt; View Source)</li>
 </ol>
@@ -232,9 +232,7 @@
 <p>Task:</p>
 </strong>
 <ol>
-<li>Open Google Chrome</li>
-
-<li>Go to any web site</li>
+<li>Open this page in Google Chrome</li>
 
 <li>Look at the page using developer tools (View &gt; Developer &gt; Developer Tools)</li>
 </ol>
@@ -247,9 +245,15 @@
 	
 
 		<h2>Meet the Command Line</h2>
-		<p>If you are using a mac, open Terminal.app. If you are on windows, as part of the package you downloaded from <a href='www.railsinstaller.org'>RailsInstaller</a> you should now have a program called <code>gitbash</code>. Open that!</p>
+		<p>These terminals are a way to interact with your computer programmatically. If you are doing any software development you will need to get to grips with using the terminal, as many of the programmes you will use will be run from the terminal, instead of by clicking an icon.</p>
 
-<p>These terminals are a way to interact with your computer programmatically. If you are doing any software development you will need to get to grips with using the terminal, as many of the programmes you will use will be run from the terminal, instead of by clicking an icon.</p>
+<p>Note: when giving you instructions for the command line we will precede them with a <code>$</code> to represent the command prompt e.g.</p>
+
+<pre><code>$ mv file1 file2</code></pre>
+
+<p><strong>You shouldn&#8217;t type the <code>$</code> sign - just the stuff after it.</strong> So for the above instruction you would just type <code>mv file1 file2</code> into the command line.</p>
+
+<h3 id='moving_around'>Moving around</h3>
 
 <p>The first thing you will need to get used to is moving around. Start by printing the name of the directory you are in:</p>
 
@@ -269,11 +273,74 @@
 
 <p>Your commandline will help you: <kbd>tab</kbd> can often be used to auto-complete names of files, the up arrow can be used to cycle through previous commands that you have typed.</p>
 
-<p>You should navigate to your <code>coding_course</code> folder that you created last week, using <code>cd</code>. When you get there create a new directory (_make directory_) for your site:</p>
+<h3 id='creating_a_directory'>Creating a directory</h3>
 
-<pre><code>$ mkdir first_site</code></pre>
+<p>You can do a lot more on the command line than just move around. We&#8217;ll be using the command line a lot over the course. For the time being we just need to create a folder:</p>
+
+<pre><code>$ mkdir coding_course</code></pre>
 
 <p>Note: choosing names without spaces makes command line navigation easier.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<ol>
+<li>
+<p>Open your command line:</p>
+
+<ul>
+<li>On a Mac open Terminal (Applications &gt; Terminal)</li>
+
+<li>On Windowns open Command Prompt with Ruby on Rails</li>
+</ul>
+</li>
+
+<li>
+<p>Find out where you are:</p>
+
+<pre><code> $ pwd</code></pre>
+</li>
+
+<li>
+<p>See what is in the same folder:</p>
+
+<pre><code> $ ls</code></pre>
+</li>
+
+<li>
+<p>If you are on a Mac move into <code>Documents</code>:</p>
+
+<pre><code> $ cd Documents</code></pre>
+</li>
+
+<li>
+<p>Create the folder for the coding course:</p>
+
+<pre><code> $ mkdir coding_course</code></pre>
+</li>
+
+<li>
+<p>Move into that folder:</p>
+
+<pre><code> $ cd coding_course</code></pre>
+</li>
+
+<li>
+<p>Move back up to the folder above</p>
+
+<pre><code> $ cd ..</code></pre>
+</li>
+
+<li>
+<p>Move back into the coding course folder. This time don&#8217;t type out coding_course - just type out the first few letters and hit <code>Tab</code>:</p>
+
+<pre><code>$ cd coding_course</code></pre>
+</li>
+
+<li>
+<p>In the Finder (Mac) or My Computer (Windows) find the folder that you just created.</p>
+</li>
+</ol>
+</div>
 	</div>
 
 	
@@ -281,27 +348,44 @@
 	
 
 		<h2>Creating an HTML page</h2>
-		<p>We&#8217;ll now create our first HTML page.</p>
+		<p>One of the nice things about HTML is you don&#8217;t need a lot to test it out on your laptop: all you need is a text editor and a web browser.</p>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
 <ol>
-<li>Create a new folder in your documents called &#8216;coding_course&#8217;</li>
+<li>
+<p>Inside your <code>coding_course</code> folder create another folder called <code>first_site</code> - make sure you are in the right folder first:</p>
 
-<li>Inside that create another folder called &#8216;first_site&#8217;</li>
+<pre><code> $ pwd
+ $ mkdir first_site</code></pre>
+</li>
 
-<li>Open Sublime Text</li>
+<li>
+<p>Open Sublime Text</p>
+</li>
 
-<li>Write &#8220;Hello&#8221;</li>
+<li>
+<p>Write &#8220;Hello&#8221;</p>
+</li>
 
-<li>Save the file as &#8216;index.html&#8217; in the &#8216;first_site&#8217; folder</li>
+<li>
+<p>Save the file as <code>index.html</code> in the <code>first_site</code> folder</p>
+</li>
 
-<li>Open &#8216;index.html&#8217; in Chrome (File &gt; Open &#8230;)</li>
+<li>
+<p>Open <code>index.html</code> in Chrome. Depending on your version of Chrome</p>
+
+<ul>
+<li>File &gt; Open &#8230;</li>
+
+<li>Cmd-o (Mac) or Ctrl-o (Windows)</li>
+</ul>
+</li>
 </ol>
 </div>
-<p>Sublime Text is a text editor. When writing HTML (and code in general) it&#8217;s important to use a program that doesn&#8217;t add any formatting of its own. For example, if you wrote &#8220;hello&#8221; and saved it in Microsoft Word it would create a complicated file which would include a load of formatting information and other stuff. We want files to be saved exactly how we see them.</p>
+<h3 id='why_indexhtml'>Why index.html?</h3>
 
-<p>There are many different possibilities for text editors. You probably already have one of Notepad or TextEdit on your computer. Sublime Text (and other editors such as NotePad++, Vim, gEdit, ..) will add <em>syntax highlighting</em> for you - they&#8217;ll colour different bits of your progamming language to make it easier to read.</p>
+<p>In the old days of the web, navigating a website was a lot more like moving around the folder system on your laptop. You&#8217;d go to a bas site and there would just be a list of the files and folders available: an index. Because of this <code>index.html</code> is still the default file that a server will serve when you navigate to a folder in the web browser.</p>
 <div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
@@ -321,8 +405,6 @@
 </li>
 </ol>
 </div>
-<p>TODO: Why index.html</p>
-
 <p>This is your first real html tag. It has an open and a close. It tells it to be a heading.</p>
 	</div>
 
@@ -335,18 +417,153 @@
 <p>Task:</p>
 </strong>
 <ol>
-<li>Go to <span>github.com/TomClose/first_site/blob/master/index.html</span></li>
+<li>
+<p>Make sure you are in your <code>coding_course</code> folder</p>
+</li>
 
-<li>Click the &#8216;Copy to Clipboard&#8217; button (just underneath &#8216;Files&#8217;)</li>
+<li>
+<p>Clone the repo for this session</p>
 
-<li>Go to Sublime Text and create a new file</li>
+<pre><code> $ git clone https://github.com/code61/learning_html.git</code></pre>
+</li>
 
-<li>Paste the contents into the new file</li>
+<li>
+<p>Check that you now have the <code>learning_html</code> folder and move into it:</p>
 
-<li>Save it as &#8216;toms_page.html&#8217; in &#8216;first_site&#8217;</li>
+<pre><code> $ ls
+ $ cd learning_html</code></pre>
+</li>
+
+<li>
+<p>Open the whole folder in Sublime Text</p>
+</li>
+
+<li>
+<p>Open the file <code>example.html</code> in Chrome and look around with the developer tools</p>
+</li>
+
+<li>
+<p>Open the file <code>notes.html</code> in Sublime Text.</p>
+</li>
+
+<li>
+<p>Change <code>notes.html</code> into valid html so that it looks like <code>notes_solution.jpg</code></p>
+</li>
 </ol>
 </div>
-<p>TODO: more about file paths in href</p>
+<p>A few things to look out for</p>
+
+<h3 id='html_file_layout'>HTML file layout</h3>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;DOCTYPE</span><span class='err'>!</span> <span class='na'>html</span><span class='nt'>&gt;</span>
+<span class='nt'>&lt;html&gt;</span>
+    <span class='nt'>&lt;head&gt;</span>
+        <span class='nt'>&lt;title&gt;</span>Page title<span class='nt'>&lt;/title&gt;</span>
+    <span class='nt'>&lt;/head&gt;</span>
+    <span class='nt'>&lt;body&gt;</span>
+        ...
+    <span class='nt'>&lt;/body&gt;</span>
+<span class='nt'>&lt;/html&gt;</span>
+</code></pre></div>
+<ul>
+<li>The doctype tells you what sort of html you&#8217;re using (html5, html4 &#8230;). With html5 it&#8217;s simple - you just write <code>html</code>.</li>
+
+<li>Everything is wrapped in an <code>&lt;html&gt; ... &lt;/html&gt;</code> tag</li>
+
+<li>Only things within the <code>&lt;body&gt; ... &lt;/body&gt;</code> tags are displayed on the page</li>
+
+<li>Things within the <code>&lt;head&gt; .. &lt;/head&gt;</code> are used to provide more information about the page</li>
+
+<li>.. for exmple the thing within <code>&lt;title&gt; ... &lt;/title&gt;</code> will be displayed in the browser bar</li>
+</ul>
+
+<h3 id='headings'>Headings</h3>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;h1&gt;</span>Top level heading<span class='nt'>&lt;/h1&gt;</span>
+
+<span class='nt'>&lt;h3&gt;</span>Lower level heading<span class='nt'>&lt;/h3&gt;</span>
+</code></pre></div>
+<ul>
+<li>There are six levels of heading <code>h1</code> .. <code>h6</code></li>
+
+<li>The higher numbers are more important</li>
+
+<li>It&#8217;s usual to only have one <code>h1</code> on a page</li>
+
+<li>You rarely see anything below <code>h4</code> in real pages</li>
+</ul>
+
+<h3 id='paragraphs_and_text'>Paragraphs and text</h3>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;p&gt;</span>This is a paragraph.<span class='nt'>&lt;/p&gt;</span>
+
+<span class='nt'>&lt;p&gt;</span>This is another paragraph. It has some <span class='nt'>&lt;em&gt;</span>italic text<span class='nt'>&lt;/em&gt;</span> and some <span class='nt'>&lt;strong&gt;</span>bold text<span class='nt'>&lt;/strong&gt;</span>.<span class='nt'>&lt;/p&gt;</span>
+</code></pre></div>
+<ul>
+<li>Paragraphs are created using the <code>&lt;p&gt;</code> tag</li>
+
+<li>The <code>&lt;em&gt;</code> tag is used to provide emphasis. In reality that means italics - in fact the tag <code>&lt;i&gt;</code> also works. Using em is better though as it fits with the idea of <em>semantic markup</em> - marking your information as to its meaning, instead of how you want it to look.</li>
+
+<li>The <code>&lt;strong&gt;</code> tag is used to make text stand out. It basically means bold - <code>&lt;b&gt;</code> also works, but <code>&lt;strong&gt;</code> is better - see above.</li>
+</ul>
+
+<h3 id='comments'>Comments</h3>
+<div class='highlight'><pre><code class='html'><span class='c'>&lt;!-- comments look like this --&gt;</span>
+</code></pre></div>
+<ul>
+<li>Comments will not display in the page &#8230;</li>
+
+<li>&#8230; but they will display in the page source. Don&#8217;t be rude!</li>
+</ul>
+
+<h3 id='lists'>Lists</h3>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;ul&gt;</span>
+    <span class='nt'>&lt;li&gt;</span>Apples<span class='nt'>&lt;/li&gt;</span>
+    <span class='nt'>&lt;li&gt;</span>Oranges<span class='nt'>&lt;/li&gt;</span>
+<span class='nt'>&lt;/ul&gt;</span>
+</code></pre></div>
+<ul>
+<li>Lists have a nested structure</li>
+
+<li><code>&lt;ul&gt;</code> is for an <em>unordered</em> list. This means bullet points.</li>
+
+<li><code>&lt;ol&gt;</code> is for an <em>ordered</em> list. That means automatic numbering.</li>
+
+<li>In both types of list you add items using a <code>&lt;li&gt;</code> tag. This stands for <em>list item</em>.</li>
+</ul>
+
+<h3 id='links'>Links</h3>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;a</span> <span class='na'>href=</span><span class='s'>&quot;http://www.facebook.com&quot;</span><span class='nt'>&gt;</span>this is a link to facebook<span class='nt'>&lt;/a&gt;</span>
+</code></pre></div>
+<ul>
+<li>The <code>href</code> property tells you where the link will point</li>
+
+<li>You can specify this link it different ways: * absolute external link e.g. &#8220;http://www.facebook.com&#8221; * absolute local link e.g. &#8220;/about&#8221;. This links to a file relative to the root of your webserver. For example if your site is at <code>www.example.com</code> the link will point to <code>www.example.com/about</code> * relative local link e.g. &#8220;about&#8221;. This links to a file relative to the current html document. In this case it will link to the file called <code>about</code> in the same folder as your current html file.</li>
+
+<li>You can also link to places in the same document using <code>href=&quot;#my_tag&quot;</code>. This</li>
+
+<li>You can get the link to open in a new tag like this: <code>&lt;a href=&quot;http://www.facebook.com&quot; target=&quot;_blank&quot;&gt;</code></li>
+</ul>
+
+<h3 id='images'>Images</h3>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;src</span> <span class='na'>alt=</span><span class='s'>&#39;my cat&#39;</span> <span class='na'>src=</span><span class='s'>&quot;my_cat.png&quot;</span><span class='nt'>&gt;</span>
+</code></pre></div>
+<ul>
+<li>The <code>alt</code> tag is for providing a description of your image. This is useful for partially sighted people using screen readers, or in case the image doesn&#8217;t load.</li>
+
+<li>The file can be linked to in the same way as href. In the example above we use a relative local link to a file called <code>my_cat.png</code> in the same folder as the html file.</li>
+</ul>
+
+<h3 id='tables'>Tables</h3>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;table&gt;</span>
+    <span class='nt'>&lt;thead&gt;</span>
+        <span class='nt'>&lt;tr&gt;</span>
+            <span class='nt'>&lt;th&gt;</span>Column1 Heading<span class='nt'>&lt;/th&gt;</span>
+            <span class='nt'>&lt;th&gt;</span>Column2 Heading<span class='nt'>&lt;/th&gt;</span>
+        <span class='nt'>&lt;/tr&gt;</span>
+    <span class='nt'>&lt;/thead&gt;</span>
+    <span class='nt'>&lt;tbody&gt;</span>
+        <span class='nt'>&lt;tr&gt;</span>
+            <span class='nt'>&lt;td&gt;</span>
+</code></pre></div>
+<pre><code>&lt;</code></pre>
 	</div>
 
 </div>
