Updating to cccf1753a169d62ed04b66a39ea3bf1a819aa7b3.

--- a/html1/index.html
+++ b/html1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Session 1</title>
+  <title>Web Fundamentals 1</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -29,7 +29,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>Session 1 <small></small></h1>
+  <h1>Web Fundamentals 1 <small>Getting going</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
@@ -122,7 +122,7 @@
 
 <p>There are many options for web servers - you don&#8217;t have to physically have your own one. There are many companies that will offer web hosting, often providing you with space on a shared server. Later in the course we will use the free hosting offered by GitHub through GitHub Pages.</p>
 
-<p>To buy a domain name you need to use a domain registrar. Examples include <span>123-reg.co.uk</span>, <span>godaddy.com</span> and <span>namecheap.com</span>. You pay the registrar to contact the body who manages a TLD (e.g. .com, .org., .co.uk) and put your server&#8217;s IP address in their DNS address book. If someone else already owns the domain you might be able to buy it off them, but this can be expensive!</p>
+<p>To buy a domain name you need to use a domain registrar. Examples include <a href='http://www.123-reg.co.uk/'>123-reg.co.uk</a>, <a href='http://www.godaddy.com/'>godaddy.com</a> and <a href='http://www.namecheap.com/'>namecheap.com</a>. You pay the registrar to contact the body who manages a TLD (e.g. .com, .org., .co.uk) and put your server&#8217;s IP address in their DNS address book. If someone else already owns the domain you might be able to buy it off them, but this can be expensive!</p>
 
 <p>Many domain registrars will try to sell you hosting and other site building tools when you buy a domain. It&#8217;s important to remember that the domain name is completely separate from the hosting and you don&#8217;t need to do them both through the same company - don&#8217;t buy anything you&#8217;re not going to use.</p>
 	</div>
@@ -232,9 +232,19 @@
 <p>Task:</p>
 </strong>
 <ol>
-<li>Open this page in Google Chrome</li>
+<li>
+<p>Open this page in Google Chrome</p>
+</li>
 
-<li>Look at the page using developer tools (View &gt; Developer &gt; Developer Tools)</li>
+<li>
+<p>Look at the page using developer tools by doing one of the following:</p>
+
+<ul>
+<li>View &gt; Developer &gt; Developer Tools</li>
+
+<li>Tools &gt; Developer Tools</li>
+</ul>
+</li>
 </ol>
 </div>
 <p>Using the magnifying glass (bottom left) You can hover over the bits of the page and it will show you the relevant bits of HTML. We will use Chrome Developer Tools a lot throughout the course.</p>
@@ -422,7 +432,7 @@
 </li>
 
 <li>
-<p>Clone the repo for this session</p>
+<p>Clone the repo for this session. In the command line type:</p>
 
 <pre><code> $ git clone https://github.com/code61/learning_html.git</code></pre>
 </li>
