Updating to cccf1753a169d62ed04b66a39ea3bf1a819aa7b3.

--- a/hmwk1/index.html
+++ b/hmwk1/index.html
@@ -95,12 +95,19 @@
 	
 
 		<h2>Preparation</h2>
-		<div class='exercise alert alert-info'><strong>
+		<p>It the next session we&#8217;re going to be meeting three new things: ruby, git and css. It&#8217;ll be quite a lot to take in. Give yourself a head start by trying out at least one of them beforehand.</p>
+<div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
-<p>(Optional) Try git</p>
+<p>(Optional) <a href='http://tryruby.org/levels/1/challenges/0'>Try ruby</a> (first level only - look in the URL).</p>
 </div>
-<p>If you have a spare 15 mins it won&#8217;t hurt to <a href='http://try.github.io/levels/1/challenges/1'>try git</a>. Don&#8217;t worry if it doesn&#8217;t make sense - more on this next time.</p>
+<p>If you have a spare 5 mins it won&#8217;t hurt to <a href='http://tryruby.org/levels/1/challenges/0'>try ruby</a>. Don&#8217;t worry if it doesn&#8217;t make sense - more on this next time.</p>
+<hr /><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>(Optional) <a href='http://try.github.io/levels/1/challenges/1'>Try git</a> (up to stage 1.9).</p>
+</div>
+<p>If you have another spare 5 mins it also won&#8217;t hurt to <a href='http://try.github.io/levels/1/challenges/1'>try git</a>. Don&#8217;t worry if it doesn&#8217;t make sense - more on this next time too.</p>
 <hr /><div class='exercise alert alert-info'><strong>
 <p>Task:</p>
 </strong>
