--- a/html1/index.html
+++ b/html1/index.html
@@ -77,11 +77,11 @@
 <p>This URL has several different parts to it:</p>
 
 <ul>
-<li><code>http</code> : the <em>protocol</em> or <em>the how</em></li>
+<li><code>http</code> : the <em>protocol</em> or <em>how</em> to fetch the information</li>
 
-<li><code>www.bbc.co.uk</code> : the <em>host</em> or <em>the where</em></li>
+<li><code>www.bbc.co.uk</code> : the <em>host</em> or <em>where</em> to fetch it from</li>
 
-<li><code>/news</code> : the <em>path</em> or <em>the what</em></li>
+<li><code>/news</code> : the <em>path</em> or precisely <em>what</em> information to fetch</li>
 </ul>
 
 <p>When we type the URL into the address bar a request is sent over the internet and some information is returned to us.</p>
@@ -255,13 +255,13 @@
 	
 
 		<h2>Meet the Command Line</h2>
-		<p>These terminals are a way to interact with your computer programmatically. If you are doing any software development you will need to get to grips with using the terminal, as many of the programmes you will use will be run from the terminal, instead of by clicking an icon.</p>
+		<p>The command line is a way to interact with your computer programmatically. If you are doing any software development you will need to get to grips with using the command line, as many of the programmes you will use will be run from the it, instead of by clicking an icon.</p>
 
 <p>Note: when giving you instructions for the command line we will precede them with a <code>$</code> to represent the command prompt e.g.</p>
 
-<pre><code>$ mv file1 file2</code></pre>
+<pre><code>$ some_command</code></pre>
 
-<p><strong>You shouldn&#8217;t type the <code>$</code> sign - just the stuff after it.</strong> So for the above instruction you would just type <code>mv file1 file2</code> into the command line.</p>
+<p><strong>You shouldn&#8217;t type the <code>$</code> sign - just the stuff after it.</strong> So for the above instruction you would just type <code>some_command</code> into the command line.</p>
 
 <h3 id='moving_around'>Moving around</h3>
 
@@ -277,9 +277,9 @@
 
 <pre><code>$ cd ..</code></pre>
 
-<p>To move back do</p>
+<p>To move back into the folder you just left do</p>
 
-<pre><code>$ cd name_of_the_directory</code></pre>
+<pre><code>$ cd name_of_the_folder</code></pre>
 
 <p>Your commandline will help you: <kbd>tab</kbd> can often be used to auto-complete names of files, the up arrow can be used to cycle through previous commands that you have typed.</p>
 
